--- a/index.html
+++ b/index.html
@@ -3,57 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Postal Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Image and Text Upload Grid</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Postal Generator</h1>
-        <form id="postalForm">
-            <label for="image">Upload Image:</label>
-            <input type="file" id="image" accept="image/*" required>
-
-            <label for="eventName">Event Name:</label>
-            <input type="text" id="eventName" placeholder="Enter event name" required>
-
-            <label for="date">Date:</label>
-            <input type="text" id="date" placeholder="Enter date (e.g., 31 - 33 May 2012)" required>
-
-            <label for="location">Location:</label>
-            <input type="text" id="location" placeholder="Enter location" required>
-
-            <label for="designer">Designer Name:</label>
-            <input type="text" id="designer" placeholder="Enter designer name" required>
-
-            <label for="year">Year:</label>
-            <input type="text" id="year" placeholder="Enter year of creation" required>
-
-            <button type="button" id="generateBtn">Generate Postal</button>
-            <button type="button" id="exportBtn">Export as PDF</button>
+        <h1>Upload Image and Text</h1>
+        <form id="uploadForm">
+            <input type="file" id="imageInput" accept="image/*" required><br>
+            <input type="text" id="textInput" placeholder="Enter a description" required><br>
+            <button type="submit">Upload</button>
         </form>
 
-        <div id="output">
-            <div class="postal" id="postalPreview">
-                <div class="image-section" id="imageSection">
-                    <!-- Image will be inserted here -->
-                </div>
-                <div class="text-section">
-                    <h2 id="eventNameOutput"></h2>
-                    <p class="details" id="dateOutput"></p>
-                    <p class="details" id="locationOutput"></p>
-                    <p class="bold">Horario:</p>
-                    <p>Jueves: 10:00 - 22:00</p>
-                    <p>Viernes: 10:00 - 22:00</p>
-                    <p>Domingo: 10:00 - 22:00</p>
-                    <p class="name" id="designerOutput"></p>
-                    <p class="year" id="yearOutput"></p>
-                </div>
-            </div>
-        </div>
+        <div class="grid" id="grid"></div>
     </div>
 
-    <script src="html2canvas.min.js"></script>
-    <script src="jspdf.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
